namespace Domain.Meter.Configuration
{
    public class MeterConfiguration
    {
        public Dictionary<string, string> Channels { get; set; }

        public string ApiUrl { get; set; }
    }
}